--- a/QuotesApp/src/index.html
+++ b/QuotesApp/src/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuotesApp</title>
+  <title>Quotes</title>
+  <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chivo|Tangerine" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
